fix rewardsum calc
Signed-off-by: Xin Li <xin.li@swirldslabs.com>